--- a/trainingapp/src/components/slides/toc/toc.html
+++ b/trainingapp/src/components/slides/toc/toc.html
@@ -28,29 +28,30 @@
 	<li>
 		<span>Understand Main Concepts</span>
 		<ol type="1">
-			<li> Components are everywhere </li>
+			<li> Classes are everywhere </li>
+			<li class="pw">PW3: Services</li>
 			<li> Dependency Injection Introduction </li>
-			<li> Inject needed components</li>
-			<li> Graphical Components &amp; templates </li>
-			<li> Components as Business Services  </li>
-			<li class="pw"> PW3: Use existing components  </li>
-			<li> Components as Filters </li>
-			<li class="pw"> PW4: Play with filters </li>
-			<li> Configuring application routes </li>
-			<li class="pw"> PW5: Use routes concepts </li>
+			<li class="pw">PW4: Services &amp; DI</li>
+			<li> What about templates </li>
+			<li> Composition in ng2  </li>
+			<li>Lifecycle directives/components</li>
+			<li class="pw">PW5: Using templates</li>
 		</ol>
 	</li>
 	<li>
-		<span>Go further into details</span>
+		<span>Understand Main Concepts</span>
 		<ol type="1">
-			<li> Observables &amp; observers: an event implementation! </li>
-			<li> Templates are powerfull</li>
-			<li class="pw"> PW6: Play with events </li>
-			<li> Changes detection &amp; 2 way data binding </li>
-			<li> Providers and child providers, why, when and how?</li>
-			<li class="pw"> PW7: Create services to make changes and observe these changes</li>
-			<li> Dynamically load a component: ProxyComponent, custom service...</li>
-			<li> About renderers </li>
+			<li> And our filters? They became Pipes </li>
+			<li class="pw"> PW6: Play with pipes</li>
+			<li> Forms and validators </li>
+			<li> The new router </li>
+			<li class="pw">Use the router</li>
+			<li>The change detection mechanism</li>
+			<li class="pw"> PW5: Use routes concepts </li>
+			<li>Unit tests</li>
+			<li class="pw">Play with karma</li>
+			<li>Integration tests</li>
+			<li class="pw">Play with protractor</li>
 		</ol>
 	</li>
 
