--- a/trainingapp/src/components/slides/ecosystem/esSix11/esSix11.html
+++ b/trainingapp/src/components/slides/ecosystem/esSix11/esSix11.html
@@ -20,7 +20,7 @@
 
 <p> 
     But both of them answer to most problematics and are fine, they also
-    are commpatible with the ES5 syntax
+    are compatible with the ES5 syntax
 </p>
 
 <editor>
