--- a/trainingapp/src/components/slides/ecosystem/esSix12/esSix12.html
+++ b/trainingapp/src/components/slides/ecosystem/esSix12/esSix12.html
@@ -12,7 +12,7 @@
         An easy and understandable syntax
     </li>
     <li>
-        reccognizable by tools ( such as IDE to get auto completion for example)
+        recognizable by tools ( such as IDE to get auto completion for example)
     </li>
     <li>
         Adapted for web browsers (so downloaded asynchronously)
