--- a/trainingapp/src/components/slides/advancedConcepts/aboutChangeDetection2/aboutChangeDetection2.html
+++ b/trainingapp/src/components/slides/advancedConcepts/aboutChangeDetection2/aboutChangeDetection2.html
@@ -17,7 +17,7 @@
 	</li>
 	<li>
 		If a user update fields from a form and validate it,
-		its when the <em>change</em> and <em>cllick</em> events
+		its when the <em>change</em> and <em>click</em> events
 		are submit
 	</li>
 	<li>
